--- a/movie-app/package.json
+++ b/movie-app/package.json
@@ -16,8 +16,10 @@
     "react": "^18.2.0",
     "react-alice-carousel": "^2.6.4",
     "react-dom": "^18.2.0",
+    "react-history-router": "^1.4.1",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-switch": "^7.0.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
