--- a/movie-app/package.json
+++ b/movie-app/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.10.4",
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.10.9",
+    "@mui/lab": "^5.0.0-alpha.104",
     "@mui/material": "^5.10.10",
     "@mui/styled-engine-sc": "^5.10.6",
     "@testing-library/jest-dom": "^5.16.5",
@@ -17,6 +18,7 @@
     "react-alice-carousel": "^2.6.4",
     "react-dom": "^18.2.0",
     "react-history-router": "^1.4.1",
+    "react-hook-form": "^7.38.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-switch": "^7.0.0",
